[gd_scene load_steps=5 format=3 uid="uid://ddrlb08e7uau0"]

[ext_resource type="Script" uid="uid://6l5gf5tk07wb" path="res://Scripts/AI/Enemies/Flying/Flying_robot_spiked_AI.gd" id="1_61fhe"]
[ext_resource type="PackedScene" uid="uid://bcxe4oftnihxq" path="res://Scenes/Bodies/Enemies/Flying/Flying_robot_spiked.tscn" id="2_artuq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmx46"]
size = Vector2(300, 350)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bjca"]
size = Vector2(1024, 202)

[node name="Flying_robot_spiked" type="Node2D"]
script = ExtResource("1_61fhe")

[node name="Robot_body" parent="." instance=ExtResource("2_artuq")]
atk = 2

[node name="Area2D" type="Area2D" parent="Robot_body"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Robot_body/Area2D"]
shape = SubResource("RectangleShape2D_gmx46")
debug_color = Color(0, 0.596078, 0.701961, 0)

[node name="Attacked_vision" type="CollisionShape2D" parent="Robot_body/Area2D"]
shape = SubResource("RectangleShape2D_7bjca")
disabled = true
debug_color = Color(0, 0.596078, 0.701961, 0)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Robot_body"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(28.63, 14.6)
enable_node_path = NodePath("../..")

[node name="Timer_anim" type="Timer" parent="."]

[connection signal="got_hit" from="Robot_body" to="." method="_on_flying_robot_spiked_got_hit"]
[connection signal="now_dead" from="Robot_body" to="." method="_on_flying_robot_spiked_now_dead"]
[connection signal="body_entered" from="Robot_body/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer_anim" to="." method="_on_timer_anim_timeout"]
